v3.5.0 (2021.03.xx)
  - Update cURL library to version 7.75.0
  - Fix race condition that could cause a "Database is locked" error to be logged during Kodi startup
  - Fix bug that could cause unnecessary triggering of both channel and channel group updates
  - Add "Enable Radio channel mappings" and "Radio channel mapping file" advanced options

v3.4.1 (2021.02.06)
  - Enable in-place addon migration during installation of Kodi Matrix RC1 or later
  - Fix bug that allowed startup tasks to execute out of order on systems with a low precision system clock
  - Fix bug that caused all EPG data to be resent to Kodi during startup regardless of a detected change to the data
  - Fix bug that caused "Timer Deleted" toast messages for timers associated with an existing recording
  - Reduce the amount of discovery event logging

v3.4.0 (2021.01.30)
  - Update libhdhomerun library to version 20201023
  - Update SQLite database engine to version 3.34.1
  - Add "Export discovery diagnostic data" PVR Client Specific setting
  - Add "HEVC Channels" channel group
  - Add support for persistent Recorded TV watched/unwatched (play count) flags
  - Change "DVR stream read operation minimum size" advanced option to default to "Automatic" and allow for an updated range of 4KiB to 64KiB
  - Replace forward slash characters with hyphen characters in Recorded TV folder names to work around Kodi limitation
  - Trigger an XMLTV reload operation during startup if there are missing channel(s) in the Electronic Program Guide (EPG) listings

v3.3.4 (2020.12.09)
  - Update SQLite database engine to version 3.34.0
  - Update cURL library to version 7.74.0
  - (Linux) Retarget ARMEL build to require ARMv6 architecture

v3.3.3 (2020.09.30)
  - Update SQLite database engine to version 3.33.0
  - Update cURL library to version 7.72.0
  - Add "Report actual start and end times for upcoming timers" Interface option

v3.3.2 (2020.07.15)
  - Update SQLite database engine to version 3.32.3