@@ -3,6 +3,7 @@ v3.5.0 (2021.03.xx)
   - Fix race condition that could cause a "Database is locked" error to be logged during Kodi startup
   - Fix bug that could cause unnecessary triggering of both channel and channel group updates
   - Add "Enable Radio channel mappings" and "Radio channel mapping file" advanced options
+  - Adjust reported Electronic Program Guide (EPG) original air values based on the system time zone
 
 v3.4.1 (2021.02.06)
   - Enable in-place addon migration during installation of Kodi Matrix RC1 or later
